# TEC-python-styleguide

./: .gitignore  README.md  TEC-style.toml  black.toml  check_templates.sh  file-structure.toml  flake8.toml  isort.toml  mypy.toml  poetry.toml  pyproject.toml  unimport.toml
.github/workflows/: main.yaml
styles/: black.toml  darglint.toml  file-structure.toml  flake8.toml  isort.toml  mypy.toml  poetry.toml  pre-commit.toml  pytest.toml  unimport.toml
templates/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ignore.py  pyproject.toml  setup.cfg  tox.ini
templates/.github/workflows/: master.yaml  pull-request.yaml  push.yaml  release.yaml
templates/ignore/: ignore.py
