[tool.poetry]
name        = "python-styleguide"
version     = "0.1.0"
description = ""
authors     = ["Arran Hobson Sayers <ahobsonsayers@gmail.com>"]

[tool.poetry.dependencies]
python  = "^3.8"
nitpick = "^0.20"
flake8  = "^3.8"
taskipy = "^1.2"

[tool.taskipy.tasks]
# Run with:
#   poetry run task check_templates 
check_templates = """
    chmod +x ./check_templates.sh &&
    ./check_templates.sh
"""

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
