# Other Poetry Sections

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14"   # Linting
mypy                     = "^0.780"  # Linting
black                    = "^20.8b1" # Formatting
isort                    = "^4.3"    # Formatting
toml                     = "^0.10"   # For isort to use pyproject.toml
pytest                   = "^6.0"    # Running Tests
tox                      = "^3.20"   # Tox Testing

# Pre-commit - helps enforce code style. Use `pre-commit install` to install
pre-commit = "^2.7"

[[tool.poetry.source]]
name = "tec-pypi"
url  = "https://pypi.theengineering.company"

[tool.nitpick]
style = "https://raw.githubusercontent.com/theengineeringco/python-styleguide/master/TEC-style.toml"

[tool.pytest.ini_options]
minversion     = "6.0"
testpaths      = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length    = 120
target-version = ["py38"]

[tool.isort]
line_length            = 120
multi_line_output      = 3
indent                 = 4
include_trailing_comma = true
force_grid_wrap        = 0
use_parentheses        = true

[tool.unimport]
include = '^<package_name>|^tests'
exclude = '(__init__.py)'

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
