# Other Poetry Sections

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15"   # Linting
mypy                     = "^0.780"  # Linting
black                    = "^20.8b1" # Formatting
pytest                   = "^6.0"    # Tests
tox                      = "^3.20"   # Tests
pre-commit               = "^2.10"   # Code Style

[[tool.poetry.source]]
name = "tec-pypi"
url  = "https://pypi.theengineering.company"

[tool.nitpick]
style = "https://raw.githubusercontent.com/theengineeringco/python-styleguide/master/TEC-style.toml"

[tool.pytest.ini_options]
minversion     = "6.0"
testpaths      = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length    = 120
target-version = ["py38"]

[tool.isort]
line_length = 120
profile     = "black"

[tool.unimport]
include = '^<package_name>|^tests'
exclude = '(__init__.py)'

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
